--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,10 @@ markdown: kramdown
 theme: minima
 gems:
   - jekyll-feed
-  - jekyll-paginate
 exclude:
   - Gemfile
   - Gemfile.lock
+
+# Custom vars
+css_theme: t-Pac
+ 
