--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,9 @@ exclude:
 css_theme: t-Pac
 owner: Governo Italiano
 logo: http://designer.italia.it/images/loghi/logo-it.svg
+
+collections:
+   pages:
+     output: true
+     permalink: /:path/
+     layout: page
