--- a/_data/l10n.yml
+++ b/_data/l10n.yml
@@ -2,27 +2,33 @@ it:
   code: ita
   name: italiano
   t:
-    lang_on_site: sito in italiano
     active_lang: lingua attiva
-    follow_us: seguici su
-    cookiebar_msg: Questo sito utilizza cookie tecnici, analytics e di terze parti. Proseguendo nella navigazione accetti l’utilizzo dei cookie.
     cookiebar_accept: Accetto
+    cookiebar_msg: Questo sito utilizza cookie tecnici, analytics e di terze parti. Proseguendo nella navigazione accetti l’utilizzo dei cookie.
     cookiebar_privacy_policy: Privacy policy
-    site_title: Il mio favoloso titolo del sito
-    site_subtitle: Il mio favoloso sottotitolo
-    search_form_on: attiva il form di ricerca
+    follow_us: seguici su
+    lang_on_site: sito in italiano
+    search_form_label: cerca
     search_form_off: disattiva il form di ricerca
+    search_form_on: attiva il form di ricerca
+    search_form_start: avvia la ricerca
+    site_subtitle: Il mio favoloso sottotitolo
+    site_title: Il mio favoloso titolo del sito
+    share_msg: condividi
 en:
   code: eng
   name: english
   t:
-    lang_on_site: website in english
     active_lang: current language
-    follow_us: follow us
-    cookiebar_msg: We are using cookies to provide statistics that help us give you the best experience of our site. By continuing to use the site you are agreeing to our use of cookies.
     cookiebar_accept: Accept
+    cookiebar_msg: We are using cookies to provide statistics that help us give you the best experience of our site. By continuing to use the site you are agreeing to our use of cookies.
     cookiebar_privacy_policy: Privacy policy
-    site_title: My awesome site title
-    site_subtitle: My awesome subtitle
-    search_form_on: enter search form
+    follow_us: follow us
+    lang_on_site: website in english
+    search_form_label: Search
     search_form_off: exit search form
+    search_form_on: enter search form
+    search_form_start: start searching
+    site_subtitle: My awesome subtitle
+    site_title: My awesome site title
+    share_msg: share
