--- a/_config.yml
+++ b/_config.yml
@@ -43,3 +43,11 @@ collections:
      output: true
      permalink: /:path/
      layout: page
+
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "pages"
+    values:
+      subnav: "subnav"
