--- a/_data/l10n.yml
+++ b/_data/l10n.yml
@@ -8,6 +8,9 @@ it:
     cookiebar_privacy_policy: Privacy policy
     follow_us: seguici su
     lang_on_site: sito in italiano
+    navigation_menu_label: Menu di navigazione
+    navigation_menu_esc: esci dalla navigazione
+    scrolltop_label: torna all'inizio dei contenuti
     search_form_label: cerca
     search_form_off: disattiva il form di ricerca
     search_form_on: attiva il form di ricerca
@@ -15,6 +18,8 @@ it:
     site_subtitle: Il mio favoloso sottotitolo
     site_title: Il mio favoloso titolo del sito
     share_msg: condividi
+    skiplinks_goto_content: vai ai contenuti
+    skiplinks_goto_navigation: vai alla navigazione del sito
 en:
   code: eng
   name: english
@@ -25,6 +30,9 @@ en:
     cookiebar_privacy_policy: Privacy policy
     follow_us: follow us
     lang_on_site: website in english
+    navigation_menu_label: Navigation menu
+    navigation_menu_esc: exit navigation
+    scrolltop_label: back to contents
     search_form_label: Search
     search_form_off: exit search form
     search_form_on: enter search form
@@ -32,3 +40,5 @@ en:
     site_subtitle: My awesome subtitle
     site_title: My awesome site title
     share_msg: share
+    skiplinks_goto_content: go to content
+    skiplinks_goto_navigation: go to site navigation
