--- a/_data/subnav.yml
+++ b/_data/subnav.yml
@@ -11,7 +11,7 @@
   - title: Architettura dell'informazione
     url: /it/infoarchitettura/index/
 - title: Visual design
-  url: /it/visual-design/index/
+  url: '#'
   subitems:
   - title: Griglie
     url: /it/layout/griglie/
