--- a/assets/icons/manifest.json
+++ b/assets/icons/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Crescita Digitale",
+    "name": "it",
     "icons": [
         {
             "src": "/assets/icons/android-chrome-192x192.png",
