--- a/_data/menu_items.yml
+++ b/_data/menu_items.yml
@@ -1,15 +1,30 @@
-- title: Link 1
-  url: /
-- title: Link 2
-  url: /
+- title: Progetti
+  url: '#'
   subitems:
-  - title: Link 2.1
+  - title: Progetti
     url: /
-  - title: Link 2.2
-    url: /
-  - title: Link 2.3
-    url: /
-- title: Link 3
-  url: /
-- title: Link 4
-  url: /
+    subitems:
+    - title: Link 2.1
+      url: /
+    - title: Link 2.2
+      url: /
+    - title: Link 2.3
+      url: /
+- title: Strumenti
+  url: '#'
+  subitems:
+  - title: Strumenti
+    url: /strumenti
+    subitems:
+    - title: Link 2.1
+      url: /
+    - title: Link 2.2
+      url: /
+    - title: Link 2.3
+      url: /
+- title: Chi siamo
+  url: /chi-siamo
+- title: FAQ
+  url: /faq
+- title: Contatti
+  url: /contatti
