--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,10 @@ exclude:
 # Custom vars
 theme_color: "#0066cc"
 css_theme: t-Pac
-owner: Governo Italiano
+owner: AgID
+owner_desc: Agenzia per l'Italia Digitale
 logo: http://designer.italia.it/images/loghi/logo-it.svg
+owner_logo: https://www.spid.gov.it/assets/img/agid-logo-bb.svg
 
 collections:
    pages:
